<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="150dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="16sp"
        android:paddingTop="14dp"
        android:textColor="@color/colorBlack"
        android:background="@color/colorWhite"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custborder"
        android:layout_marginTop="15dp"
        android:paddingTop="14dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>


</LinearLayout>