<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        android:weightSum="2">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">
        </com.google.android.gms.common.SignInButton>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>


    <EditText
        android:id="@+id/et_mail_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:paddingStart="5dp"
        android:textColor="@color/colorBlack"
        android:background="@color/colorLightGrey"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_pass_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:background="@color/colorLightGrey"
        android:paddingStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="RtlSymmetry" />



    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/pass"
        android:text="@string/login"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlack"
        android:paddingStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="RtlSymmetry" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Do not have an account?"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="13sp"
            android:layout_marginStart="4dp"/>

    </LinearLayout>


</LinearLayout>